2006-09-27  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* support/devel/all.tcl: Ensure that root is absolute across all
	  versions of Tcl. Added code to recreate the auto_path in the
	  slave interps and processes after it was smashed by older
	  revisions of tcltest during their load.

2006-09-20  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* support/releases/history/README-1.9.txt: New file. Readme file
	  for the upcoming release, providing an overview of the changes.

2006-09-20  Andreas Kupries  <andreask@activestate.com>

	* support/devel/sak/test/run.tcl: Modified to not use echo and cat
	* support/devel/sak/test/help.txt: when starting a testsuite on
	  windows. Eliminated the use of valgrind for that platform as
	  well. Updated the documentation regarding the latter.

2006-09-19  Andreas Kupries <andreask@activestate.com>

	* support/devel/sak/test/run.tcl: Extended testsuite logging.
	* support/devel/sak/test/help.txt: Standard user feedback and
	  extended information (raw log, summaries) are written to a set
	  of files. All required information in one run, instead of two.

2006-09-18  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* installer.tcl: Accepted patch by Michael Schlenker
	  <mic42@users.sourceforge.net> for [Tcllib SF Bug 1559489] to
	  divert error messages to a dialog box instead of stderr where
	  possible, to avoid them being silently swallowed by windows.

	* support/devel/sak/test/run.tcl: Reworked output generated
	* support/devel/all.tcl: by testsuites, added processing of
	  the modified output for progress reporting, condensed reporting,
	  and in preparation of placing results into a database.
	* support/devel/sak/test/help.txt: Updated documentation.
	* support/devel/sak/test/shell.tcl: Fixed typo in name of method
	  to call to remove shells from the database.

2006-09-06  Andreas Kupries <andreask@activestate.com>

	* Makefile.in (test): Updated the target to the new syntax